# meper-agent

./: .dockerignore  .editorconfig  .gitignore  LICENSE  Makefile  PRODUCT.md  README.md  SPEC.md  architecture-overview.html  dashboard.yml  design-system-page-structure.md  workflow-task.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  eslint_err.txt  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/channels/: base.py  errors.py  registry.py
backend/app/cli/: __init__.py  __main__.py
backend/app/core/: api_key_cache.py  auth_apikey.py  bootstrap.py  checkpointer.py  circuit_breaker.py  config.py  crypto.py  errors.py  introspection_cache.py  logging.py  pagination.py  rate_limiter.py  security.py  user_auth_state.py
backend/app/db/: base_service.py  indexes.py  mongodb.py  redis.py
backend/app/engine/: checkpointer.py  context.py  llm_factory.py  prompt.py  state.py
backend/app/models/: agent.py  api_key.py  audit_log.py  base.py  channel.py  compat.py  credential.py  execution_log.py  ext_api_call_log.py  file_library.py  mcp_connection.py  model.py  notification.py  prompt_template.py  role.py  session.py  task.py  tool.py  trigger.py  user.py  webhook.py  workflow.py  workflow_registry.py
backend/app/schemas/: agent.py  api_key.py  auth.py  channel.py  common.py  credential.py  execution.py  ext_api.py  file_library.py  mcp_connection.py  model.py  notification.py  role.py  session.py  task.py  tool.py  user.py  webhook.py  workflow.py
backend/app/services/: agent_execution_service.py  agent_service.py  api_key_service.py  api_key_stats_service.py  auth_service.py  channel_service.py  credential_service.py  event_bridge.py  execution_log_service.py  execution_stats_service.py  ext_api_call_log_service.py  file_rendering.py  file_service.py  file_storage.py  mcp_connection_service.py  message_converters.py  model_service.py  notification_repo.py  notification_service.py  role_service.py  session_service.py  task_recovery.py  task_scheduler_service.py  task_service.py  tool_service.py  trigger_repo.py  trigger_scheduler_service.py  user_auth_service.py  user_service.py  webhook_delivery.py  webhook_service.py  workflow_registry_service.py  workflow_service.py  ws_manager.py
backend/app/utils/: sanitize.py  template_renderer.py
backend/app/workers/: loop.py  (+2 more)
backend/scripts/: generate_openapi.py  init_mongo.py  migrate_messages_v2.py  migrate_session_thread.py
backend/static/: agent-chat.js
backend/tests/: conftest.py  test_harness_integration_stream.py  test_workflow_validator.py
(+704 files in other folders)
